# course-work-opengl

./: .gitignore  CMakeLists.txt  main.cpp  readme.md  run.sh
cmake-modules/: FindSDL2.cmake
cmake_modules/: copy_resources.cmake
include/: Kernel.h  glcorearb.h  kernel.h
include/Interfaces&Abstractions/: AbstractCamera.h  AbstractObject.h  AbstractScene.h  ClientInputInterface.h  ControlableInterface.h  DrawableInterface.h  DynamicCameraInterface.h  InputInterface.h  ObserverInterface.h  Subject.h  SubjectInterface.h
include/commands/: AInputCommand.h  Accelerate.cpp  Accelerate.h  BaseInputCommand.h  ICommand.h  IInputCommand.h  LookHorizontal.h  LookVertical.h  MoveBack.h  MoveDown.h  MoveForward.h  MoveLeft.h  MoveRight.h  MoveUp.h  QuitCommand.h  Warframe.h
include/components/: CubeMesh.cpp  CubeMesh.h  Transform.cpp  Transform.h
include/core/: BaseBuffer.h  CubeMesh.h  DirectionalLight.h  Ebo.h  Fbo.h  Graphics.h  Kernel.h  Material.h  Mesh.h  Model.h  ModelLoader.h  OpenGl.h  Shader.h  ShaderProgram.h  ShaderTypes.h  ShadowMap.h  Texture.h  Transform.h  UserInput.h  Vao.h  Vbo.h  Vertex.h
include/exceptions/: BaseException.h  ShaderProgramCreationException.h  ShaderProgramException.h
include/graphics/: ABuffer.h  AbstractBuffer.h  BaseBuffer.h  Ebo.h  Graphics.h  IDrawable.h  IOutput.h  OpenGl.h  Scene.h  Shader.h  ShaderProgram.h  ShaderTypes.h  Ubo.h  UboBindIndexes.h  Vao.h  Vbo.h  Vertex3d.h  abstract_buffer.h  ebo.h  shader.h  ubo.h  vao.h  vbo.h
include/input/: AControlable.h  ClientInput.h  IControlable.h  IInput.h  KeyLogger.h  UserInput.h
include/interfaces/: ICamera.h  ICommand.h  IControlable.h  IDrawable.h  IDynamicCamera.h  IInput.h  IInputCommand.h  IMaterial.h  IMesh.h  IModel.h  IObject.h  IScene.h  ITexture.h  ITransform.h
include/interfaces&abstractions/: ICamera.h  IClientInput.h  IControlable.h  IDrawable.h  IInput.h  IObserver.h  ISubject.h
include/objects/: AObject.h  AngelLucy.h  BaseObject.h  BaseScene.cpp  BaseScene.h  Cube.h  CubeScene.h  Dragon.h  DynamicCamera.h  Floor.h  ICamera.h  IObject.h  IScene.h  LucyBase.h  M4A1.h  Nanosuit.h  SASSoldier.h  Scene.h  SkyBox.h  base_object.h  bicameral_hyperboloid.h  drawable.h
include/test/: AbstractCamera.h  AbstractObject.h  AbstractScene.h  Camera.h  ClientInput.h  ClientInputInterface.h  Cube.h  DrawableInterface.h  Graphics.h  InputInterface.h  KeyLogger.h  ObjectInterface.h  ObserverInterface.h  Scene.h  Subject.h  notifier.cpp  notifier.h  observer.h  test_notifier.cpp  test_notifier.h  test_observer.cpp  test_observer.h
include/time/: AbstractTimer.h  IntervalTimer.h  Timer.h  abstract_timer.h
resource/shaders/: FirstFragment.glsl  FirstVertex.glsl
resources/shaders/: FirstFragment.glsl  FirstVertex.glsl  debugQuadFragment.glsl  debugQuadVertex.glsl  depthVertex.glsl  fragment.glsl  mainFragment.glsl  mainVertex.glsl  skyboxFragment.glsl  skyboxVertex.glsl  skyboxVertrex.glsl  vertex.glsl
source/: Kernel.cpp  main.cpp
source/commands/: AInputCommand.cpp  Accelerate.cpp  BaseInputCommand.cpp  LookHorizontal.cpp  LookVertical.cpp  MoveBack.cpp  MoveDown.cpp  MoveForward.cpp  MoveLeft.cpp  MoveRight.cpp  MoveUp.cpp  QuitCommand.cpp  Warframe.cpp
source/components/: CubeMesh.cpp
source/graphics/: BaseBuffer.cpp  Ebo.cpp  Graphics.cpp  OpenGl.cpp  Shader.cpp  ShaderProgram.cpp  Ubo.cpp  Vao.cpp  Vbo.cpp
source/input/: AControlable.cpp  ClientInput.cpp  UserInput.cpp
source/objects/: AObject.cpp  BaseObject.cpp  Cube.cpp  DynamicCamera.cpp  Scene.cpp
sources/: Accelerate.cpp  AngelLucy.cpp  BaseBuffer.cpp  BaseException.cpp  BaseInputCommand.cpp  BaseObject.cpp  BaseScene.cpp  Cube.cpp  CubeMesh.cpp  CubeScene.cpp  DirectionalLight.cpp  Dragon.cpp  DynamicCamera.cpp  Ebo.cpp  Fbo.cpp  Floor.cpp  Graphics.cpp  Kernel.cpp  LookHorizontal.cpp  LookVertical.cpp  LucyBase.cpp  M4A1.cpp  Material.cpp  Mesh.cpp  Model.cpp  ModelLoader.cpp  MoveBack.cpp  MoveDown.cpp  MoveForward.cpp  MoveLeft.cpp  MoveRight.cpp  MoveUp.cpp  Nanosuit.cpp  OpenGl.cpp  QuitCommand.cpp  SASSoldier.cpp  Scene.cpp  Shader.cpp  ShaderProgram.cpp  ShaderProgramCreationException.cpp  (+9 more)
src/: Kernel.cpp  Kernel1.cpp  environment.cpp  kernel.cpp  main.cpp
src/abstractions/: Subject.cpp
src/include/: vao.hpp  (+33 more)
(+131 files in other folders)
